# LongArithm

./: CMakeLists.txt  a.out  bn.h  bn_manainen.c  mnog.c  test.c
lib/: CMakeLists.txt  bn.h  bn_manainen.c
